--- a/settings.json
+++ b/settings.json
@@ -374,7 +374,7 @@
     {
       "text": "DEBUG",
       "color": "#fff",
-      "backgroundColor": "#000",
+      "backgroundColor": "#7e7e7e25",
       "overviewRulerColor": "#7e7e7e",
       "borderColor": "#7e7e7e",
       //other styling properties goes here .."
@@ -384,13 +384,13 @@
       "color": "#ffe44e",
       "backgroundColor": "#000",
       "overviewRulerColor": "#ffe44e",
-      "borderColor": "#ffe44e",
+      "border":"none",
       //other styling properties goes here .."
     },
     {
       "text": "HACK",
       "color": "#d10000",
-      "backgroundColor": "#000",
+      "backgroundColor": "#d1000025",
       "overviewRulerColor": "#d10000",
       "borderColor": "#d10000",
       //other styling properties goes here ...
@@ -398,7 +398,7 @@
     {
       "text": "TODO",
       "color": "#ffab00",
-      "backgroundColor": "#000",
+      "backgroundColor": "#ffab0025",
       "overviewRulerColor": "#ffab00",
       "borderColor": "#ffab00",
       //other styling properties goes here ...
@@ -406,7 +406,7 @@
     {
       "text": "FIXME",
       "color": "#ff5ca8",
-      "backgroundColor": "#000",
+      "backgroundColor": "#ff5ca825",
       "overviewRulerColor": "#ff5ca8",
       "borderColor": "#ff5ca8",
       //other styling properties goes here ...
@@ -414,7 +414,7 @@
     {
       "text": "///",
       "color": "#ca93f8",
-      "backgroundColor": "#000",
+      "backgroundColor": "#ca93f825",
       "overviewRulerColor": "#ca93f8",
       "borderColor": "#ca93f8b2",
       //other styling properties goes here ...
@@ -422,7 +422,7 @@
     {
       "text": "DONE",
       "color": "#07d400",
-      "backgroundColor": "#000",
+      "backgroundColor": "#07d40025",
       "overviewRulerColor": "#07d400",
       "borderColor": "#07d400",
       //other styling properties goes here ...
@@ -430,7 +430,7 @@
     {
       "text": "REVIEW",
       "color": "#00a2ff",
-      "backgroundColor": "#000",
+      "backgroundColor": "#00a2ff25",
       "overviewRulerColor": "#00a2ff",
       "borderColor": "#00a2ff",
       //other styling properties goes here ...
